[package]
name = "ruoka-rs"
description = "Fetch the mayk.fi menu efficiently"
version = "1.0.4"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/libreMayk/ruoka-rs"
keywords = ["menu", "mayk", "food"]

[dependencies]
curl = "0.4.43"
regex = "1.6.0"
colored = "2.0.0"
chrono = "0.4.19"